--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://https://san-2816.github.io/wander/"
+  "homepage": "https://san-2816.github.io/wander/"
 }
