로그인 서버 연동 전

--- a/package.json
+++ b/package.json
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://san-2816.github.io/wander/"
+  "homepage": "https://www.wanderland.kr"
 }
