--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "gh-pages": "^2.1.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
