--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gh-pages": "^2.1.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2"
