--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "gh-pages": "^2.1.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-cookie": "^4.0.1",
